# SagasuSpider

./: .gitignore  README.md  main.py  pyproject.toml
.github/: dependabot.yml
SagasuSpider/: __main__.py  core.py  log.py  models.py  spider.py  upload.py  utils.py
