[tool.poetry]
name = "SagasuSpider"
version = "0.1.0"
description = "A spider to get all subjects of bangumi.tv"
authors = ["TheSagasu"]
license = "MIT"
packages = [
    { include = "SagasuSpider" },
]

[tool.poetry.scripts]
SagasuSpider = 'SagasuSpider.__main__:main'

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.1"
httpx = {extras = ["http2"], version = "^0.17.1"}
loguru = "^0.5.3"
aiofiles = "^0.6.0"
click = "^8.0.1"
dateparser = "^1.0.0"
tqdm = "^4.62.2"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
